# MindVisionCapture

./: CMakeLists.txt  MindVisionCapture.cpp  MindVisionCapture.h  main.cpp
